creusot/tests/should_fail/prusti/traits/homes.stderr
error[creusot]: `&'a mut X` cannot be moved from `'x` to `'curr` since it doesn't live long enough
                `'a` doesn't outlive `'curr`
  --> homes.rs:11:5
   |
11 |     fn model(self) -> Y {
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

